--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.toscan</groupId>
-  <artifactId>bd</artifactId>
+  <artifactId>flink-query</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>bd</name>
+  <name>flink-query</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
