--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "java.home":"/home/liu/jdk",
+    "java.configuration.runtimes": [
+
+        {
+          "name": "JavaSE-11",
+          "path": "/usr/lib/jvm/java-1.11.0-openjdk-amd64",
+          "default": true
+        }
+      ],
+      "java.compile.nullAnalysis.mode": "automatic",
+      "java.configuration.updateBuildConfiguration": "interactive"
 }
