--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
 
         {
           "name": "JavaSE-11",
-          "path": "/usr/lib/jvm/java-1.11.0-openjdk-amd64",
+          "path": "/usr/lib/jvm/java-11-openjdk-amd64",
           "default": true
         }
       ],
